# face_swap_flutter

camera_app/: analysis_options.yaml  flow.md  note.txt  pubspec.yaml
camera_app/.read/: image_upload.md
camera_app/android/app/: build.gradle
camera_app/ios/: Podfile
camera_app/ios/Runner/: Info.plist
camera_app/ios/Runner.xcodeproj/: project.pbxproj
camera_app/lib/: face_correspondences_screen.dart  face_morph_screen.dart  face_morph_screen_dev.dart  face_recognition_screen.dart  main.dart  mobile_camera_screen.dart  text_recognition_screen.dart  tri_lists_screen.dart  video_gray.dart  video_swap.dart  video_upload_screen.dart
camera_app/lib/screens/: face_correspondences_screen.dart  face_morph_screen.dart  face_recognition_screen.dart  mobile_camera_screen.dart  text_recognition_screen.dart  tri_lists_screen.dart  video_player_screen.dart
camera_app/lib/utils/: face_morph_utils.dart
camera_app/macos/Flutter/: GeneratedPluginRegistrant.swift
camera_app/macos/Runner.xcodeproj/: project.pbxproj
native_opencv/: pubspec.yaml
native_opencv/android/: CMakeLists.txt  build.gradle
native_opencv/android/src/main/kotlin/com/example/native_opencv/: NativeOpencvPlugin.kt
native_opencv/android/src/test/kotlin/com/example/native_opencv/: NativeOpencvPluginTest.kt
native_opencv/example/: pubspec.yaml
native_opencv/example/integration_test/: plugin_integration_test.dart
native_opencv/example/lib/: main.dart
native_opencv/lib/: native_opencv.dart  native_opencv_method_channel.dart
native_opencv/test/: native_opencv_test.dart
(+14 files in other folders)
